<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_title"
        android:textSize="15sp"/>

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/status_hot"
        android:textOff="@string/status_cold"/>

    <CheckBox
        android:id="@+id/checkbox_milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"/>

    <CheckBox
        android:id="@+id/checkbox_sugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"/>

    <CheckBox
        android:id="@+id/checkbox_cinnamon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinnamon"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        />

</LinearLayout>